--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -162,3 +162,20 @@ jobs:
         env:
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+  
+  build_snap:
+    name: Build and Upload Snap
+    steps:
+      -
+        name: Checkout
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      -
+        name: Install Snapcraft with LXD
+        uses: samuelmeuli/action-snapcraft@v1
+        with:
+          use_lxd: true
+      - 
+        name: Build snap
+        run: sg lxd -c 'snapcraft --use-lxd'
